--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <title>Recipe Bot</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            margin: auto;
+            text-align: center;
+        }
+
+        .container {
+            margin-top: 10px;
+        }
+
+        .chat-box {
+            background-color: azure;
+            min-height: 500px;
+        }
+
+
+        .card {
+            box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+            background: #fff;
+            border-radius: 2px;
+            display: inline-block;
+        }
+    </style>
+</head>
+
+<body>
+    <nav>
+        <div class="nav-wrapper">
+            <a href="#" class="brand-logo center">Deja Food</a>
+        </div>
+    </nav>
+    <div class="card container">
+
+        <iframe class="chat-box" src='https://webchat.botframework.com/embed/DejaFood?s=9hdOX44q1bI.cwA.DoI.W-VQvsXrgQgdZqb4YW_QjV7xbfE-75ENMOcp50xfxfo'
+            style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+    </div>
+</body>
+
+</html>
