--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </nav>
     <div class="card container">
 
-        <iframe class="chat-box" src='https://webchat.botframework.com/embed/DejaFood?s=9hdOX44q1bI.cwA.DoI.W-VQvsXrgQgdZqb4YW_QjV7xbfE-75ENMOcp50xfxfo'
+        <iframe class="chat-box" src='https://webchat.botframework.com/embed/DejaFood?t=9hdOX44q1bI.cwA.DoI.W-VQvsXrgQgdZqb4YW_QjV7xbfE-75ENMOcp50xfxfo'
             style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
     </div>
 </body>
